--- a/알고리즘_기초_1.md
+++ b/알고리즘_기초_1.md
@@ -1,1 +1,92 @@
 > 알고리즘 기초 1/2
+> Swift 풀이
+
+# 자료구조1
+## 스택 10828
+```swift
+let num = Int(readLine()!)!
+var stack = Stack()
+
+for _ in 0..<num {
+    let orders = readLine()!.split(separator: " ").map{String($0)}
+    
+    switch orders[0] {
+    case "push":
+        stack.push(Int(orders[1])!)
+    case "pop":
+        print(stack.pop())
+    case "size":
+        print(stack.size())
+    case "empty":
+        print(stack.empty())
+    case "top":
+        print(stack.top())
+    default: break
+    }
+}
+
+class Stack {
+    var memory = [Int]()
+    
+    func push(_ x: Int) {
+        memory.append(x)
+    }
+    
+    func pop() -> Int {
+        if isEmpty() {
+            return -1
+        } else {
+            return memory.removeLast()
+        }
+    }
+    
+    func isEmpty() -> Bool {
+        if memory.isEmpty {
+            return true
+        } else {
+            return false
+        }
+    }
+    
+    func empty() -> Int {
+        if isEmpty() {
+            return 1
+        } else {
+            return 0
+        }
+    }
+    
+    func size() -> Int {
+        return memory.count
+    }
+    
+    func top() -> Int {
+        if isEmpty() {
+            return -1
+        } else {
+            return memory.last!
+        }
+    }
+}
+```
+
+## 단어 뒤집기 9093
+```swift
+let t = Int(readLine()!)!
+
+for _ in 0..<t {
+    let words = readLine()!.split(separator: " ").map{String($0)}
+    var arr = [String]()
+    
+    for word in words {
+        var temp = ""
+        for str in word.reversed() {
+            temp += String(str)
+        }
+        arr.append(temp)
+    }
+    
+    let result = arr.joined(separator: " ")
+    print(result)
+}
+```
