자료구조1 풀이
괄호
스택 수열
에디터

--- a/알고리즘_기초_1/자료구조_1.md
+++ b/알고리즘_기초_1/자료구조_1.md
@@ -90,3 +90,115 @@ for _ in 0..<t {
     print(result)
 }
 ```
+
+## 괄호 9012
+
+```swift
+let t = Int(readLine()!)!
+
+for _ in 0..<t {
+    let input = readLine()!
+
+    if isBracket(input) {
+        print("YES")
+    } else {
+        print("NO")
+    }
+}
+
+func isBracket(_ input: String) -> Bool {
+    var stack = [Character]()
+    
+    for char in input {
+        if char == "(" {
+            stack.append("(")
+        } else {
+            if stack.isEmpty {
+                return false
+            } else {
+                stack.removeLast()
+            }
+        }
+    }
+    
+    if stack.isEmpty {
+        return true
+    } else {
+        return false
+    }
+}
+```
+
+
+
+## 스택 수열 1874
+
+```swift
+let n = Int(readLine()!)!
+var nums = [Int]()
+var stack = [Int]()
+var operators = [Character]()
+var index = 0
+
+for _ in 0..<n {
+    let num = Int(readLine()!)!
+    nums.append(num)
+}
+
+for i in 1...n {
+    stack.append(i)
+    operators.append("+")
+    
+    while !stack.isEmpty && nums[index] == stack.last! {
+        stack.removeLast()
+        operators.append("-")
+        index += 1
+    }
+}
+
+if stack.isEmpty {
+    for op in operators {
+        print(op)
+    }
+} else {
+    print("NO")
+}
+```
+
+
+
+## 에디터 1406
+
+```swift
+var stackLeft = Array(readLine()!)
+var stackRight = [Character]()
+
+let num = Int(readLine()!)!
+
+for _ in 0..<num {
+    // let orders = readLine()!.split(separator: " ").map{String($0)}
+    let orders = readLine()!
+    
+    switch orders {
+    case "L":
+        if !stackLeft.isEmpty {
+            stackRight.append(stackLeft.removeLast())
+        }
+    case "D":
+        if !stackRight.isEmpty {
+            stackLeft.append(stackRight.removeLast())
+        }
+    case "B":
+        if !stackLeft.isEmpty {
+            stackLeft.removeLast()
+        }
+    //case "P":
+    default:
+        stackLeft.append(orders.last!)
+    // default: break
+    }
+}
+
+print(String(stackLeft + stackRight.reversed()))
+```
+
