--- a/알고리즘_기초_1/자료구조_1.md
+++ b/알고리즘_기초_1/자료구조_1.md
@@ -202,3 +202,205 @@ for _ in 0..<num {
 print(String(stackLeft + stackRight.reversed()))
 ```
 
+## 큐 10845
+
+```swift
+let n = Int(readLine()!)!
+var queue = Queue()
+
+for _ in 0..<n {
+    let input = readLine()!.split(separator: " ").map{String($0)}
+    
+    switch input[0] {
+        case "push":
+        queue.push(Int(input[1])!)
+        case "pop":
+        print(queue.pop())
+        case "size":
+        print(queue.size())
+        case "empty":
+        if queue.empty() {
+            print("1")
+        } else {
+            print("0")
+        }
+        case "front":
+        print(queue.front())
+        case "back":
+        print(queue.back())
+        default: break
+    }
+}
+
+class Queue {
+    var memory = [Int]()
+    
+    func push(_ x: Int) {
+        memory.append(x)
+    }
+    
+    func pop() -> Int {
+        if self.empty() {
+            return -1
+        } else {
+            return memory.removeFirst()
+        }
+    }
+    
+    func size() -> Int {
+        return memory.count
+    }
+    
+    func empty() -> Bool {
+        if memory.isEmpty {
+            return true
+        } else {
+            return false
+        }
+    }
+    
+    func front() -> Int {
+        if self.empty() {
+            return -1
+        } else {
+            return memory.first!
+        }
+    }
+    
+    func back() -> Int {
+        if self.empty() {
+            return -1
+        } else {
+            return memory.last!
+        }
+    }
+}
+```
+
+
+
+## 요세푸스 문제 1158
+
+```swift
+let input = readLine()!.split(separator: " ").map {Int(String($0))!}
+
+let n = input[0]
+let k = input[1]
+
+var queue = Array(1...n)
+var result = "<"
+var index = k-1
+
+while queue.count != 1 {
+    if index >= queue.count {
+        index %= queue.count
+    }
+    
+    let value = queue.remove(at: index)
+    result += String(value) + ", "
+    index += (k-1)
+}
+result += String(queue.last!) + ">"
+
+print(result)
+```
+
+
+
+## 덱 10866
+
+
+
+```swift
+let n = Int(readLine()!)!
+var deque = Deque()
+
+for _ in 0..<n {
+    let input = readLine()!.split(separator: " ").map{String($0)}
+    
+    switch input[0] {
+        case "push_front":
+        deque.push_front(Int(input[1])!)
+        case "push_back":
+        deque.push_back(Int(input[1])!)
+        case "pop_front":
+        print(deque.pop_front())
+        case "pop_back":
+        print(deque.pop_back())
+        case "size":
+        print(deque.size())
+        case "empty":
+        print(deque.empty())
+        case "front":
+        print(deque.front())
+        case "back":
+        print(deque.back())
+        default: break
+    }
+}
+
+class Deque {
+    var memory = [Int]()
+    
+    func push_front(_ x: Int) {
+        memory.insert(x, at: 0)
+    }
+    
+    func push_back(_ x: Int) {
+        memory.append(x)
+    }
+    
+    func pop_front() -> Int {
+        if isEmpty() {
+            return -1
+        } else {
+            return memory.removeFirst()
+        }
+    }
+    
+    func pop_back() -> Int {
+        if isEmpty() {
+            return -1
+        } else {
+            return memory.removeLast()
+        }
+    }
+    
+    func size() -> Int {
+        return memory.count
+    }
+    
+    func empty() -> Int {
+        if isEmpty() {
+            return 1
+        } else {
+            return 0
+        }
+    }
+    
+    func front() -> Int {
+        if isEmpty() {
+            return -1
+        } else {
+            return memory.first!
+        }
+    }
+    
+    func back() -> Int {
+        if isEmpty() {
+            return -1
+        } else {
+            return memory.last!
+        }
+    }
+    
+    func isEmpty() -> Bool {
+        if self.memory.isEmpty {
+            return true
+        } else {
+            return false
+        }
+    }
+}
+```
+
