--- a/알고리즘_기초_1/자료구조_1_연습.md
+++ b/알고리즘_기초_1/자료구조_1_연습.md
@@ -67,3 +67,28 @@ for char in input {
 print(answer)
 ```
 
+# 오큰수 (17298)
+
+```swift
+let n = readLine()!
+let input = readLine()!.split(separator: " ").map{Int(String($0))!}
+var answer = Array(repeating: "", count: input.count)
+var stack = [Int]()
+
+for i in stride(from: input.count - 1, through: 0, by: -1) {
+    while !stack.isEmpty && stack.last! <= input[i] {
+        stack.removeLast()
+    }
+    
+    if stack.isEmpty {
+        answer[i] = "-1"
+    } else {
+        answer[i] = String(stack.last!)
+    }
+    
+    stack.append(input[i])
+}
+
+print(answer.joined(separator: " "))
+```
+
