--- a/알고리즘_기초_1/자료구조_1_참고.md
+++ b/알고리즘_기초_1/자료구조_1_참고.md
@@ -91,3 +91,134 @@ print(result)
 
 ```
 
+# 알파벳 개수 (10808)
+
+```swift
+let s = readLine()!
+var arr = Array(repeating: 0, count: 26)
+
+for c in s {
+    let num = c.asciiValue! - 97
+    let index = Int(num)
+    arr[index] += 1
+}
+
+print(arr.map{String($0)}.joined(separator: " "))
+
+```
+
+# 알파벳 찾기 (10809)
+
+```swift
+let s = Array(readLine()!)
+var arr = Array(repeating: -1, count: 26)
+
+for i in 0..<s.count {
+    let num = s[i].asciiValue! - 97
+    let index = Int(num)
+    
+    if arr[index] == -1 {
+        arr[index] = i
+    }
+}
+
+print(arr.map{String($0)}.joined(separator: " "))
+```
+
+# 문자열 분석 (10820)
+
+```swift
+while let line = readLine() {
+    let arr = Array(line)
+    var lower = 0
+    var upper = 0
+    var num = 0
+    var blank = 0
+    
+    for c in arr {
+        if c.isLowercase {
+            lower += 1
+        } else if c.isUppercase {
+            upper += 1
+        } else if c.isNumber {
+            num += 1
+        } else if c == " " {
+            blank += 1
+        }
+    }
+    
+    print("\(lower) \(upper) \(num) \(blank)")
+}
+```
+
+# 단어 길이 재기 (2743)
+
+```swift
+let line = readLine()!
+
+print(line.count)
+
+```
+
+# ROT13 (11655)
+
+```swift
+let line = readLine()!
+var answer = ""
+
+for c in line {
+    if c.isLowercase {
+        var num = c.asciiValue! + 13
+        if num > 122 {
+            num -= 26
+        }
+        answer += String(UnicodeScalar(num))
+    } else if c.isUppercase {
+        var num = c.asciiValue! + 13
+        if num > 90 {
+            num -= 26
+        }
+        answer += String(UnicodeScalar(num))
+    } else {
+        answer += String(c)
+    }
+}
+
+print(answer)
+
+
+```
+
+# 네 수 (10824)
+
+```swift
+let line = readLine()!.split(separator: " ")
+
+let a = line[0] + line[1]
+let b = line[2] + line[3]
+
+print(Int(a)! + Int(b)!)
+
+```
+
+# 접미사 배열 (11656)
+
+```swift
+let line = Array(readLine()!)
+var arr = [String]()
+
+for i in 0..<line.count {
+    let startIndex = line.index(line.startIndex, offsetBy: i)
+    let str = String(line[startIndex..<line.endIndex])
+    arr.append(str)
+}
+
+let sorted = arr.sorted {$0 < $1}
+
+for str in sorted {
+    print(str)
+}
+
+```
+
+
