--- a/알고리즘_기초_1/300_수학_1.md
+++ b/알고리즘_기초_1/300_수학_1.md
@@ -170,4 +170,29 @@ while true {
 }
 
 ```
+# 팩토리얼 (10872)
+
+```swift
+let n = Int(readLine()!)!
+
+var result = 1
+for i in 0..<n {
+    result = result * (i+1)
+}
+
+print(result)
+
+```
+
+# 팩토리얼 0의 개수 (1676)
+
+```swift
+let n = Int(readLine()!)!
+
+print((n/5) + (n/25) + (n/125))
+
+
+
+```
+
 
