--- a/알고리즘_기초_1/301_수학_1_연습.md
+++ b/알고리즘_기초_1/301_수학_1_연습.md
@@ -99,3 +99,89 @@ func binaryToOctal(_ binary: ArraySlice<Int>) -> String {
 
 ```
 
+# 8진수 2진수 (1212)
+
+```swift
+let octal = readLine()!.map {Int(String($0))!}
+var result = ""
+
+let arr = ["000", "001", "010", "011", "100", "101", "110", "111"]
+
+for num in octal {
+    result += arr[num]
+}
+
+while result.first == "0" {
+    result.removeFirst()
+}
+
+if result.isEmpty {
+    result = "0"
+    print(result)
+} else {
+    print(result)
+}
+
+
+```
+
+# -2진수 (2089)
+
+```swift
+var num = Int(readLine()!)!
+var temp = ""
+
+while num != 0 {
+    var remain = num % -2
+    num /= -2
+    
+    if remain == -1 {
+        num += 1
+        remain = 1
+    }
+
+    temp += String(remain)
+}
+
+var result = String(temp.reversed())
+
+if result.isEmpty {
+    result = "0"
+}
+
+print(result)
+
+```
+
+# 골드바흐 파티션 (17103)
+
+```swift
+let t = Int(readLine()!)!
+let max = 1000000
+var arr = Array(repeating: true, count: max + 1)
+
+for i in 2...max {
+    if arr[i] == false {
+        continue
+    }
+    
+    for j in stride(from: i + i, through: max, by: i) {
+        arr[j] = false
+    }
+}
+
+for _ in 0..<t {
+    let n = Int(readLine()!)!
+    var count = 0
+    
+    for num in 2...n/2 {
+        if arr[num] == true && arr[n-num] == true {
+            count += 1
+        }
+    }
+    
+    print(count)
+}
+
+```
+
